Use the entire enum instead of hardcoding like an idiot
Signed-off-by: Fjc <charlesfrancoos@gmail.com>